--- a/svice-frontend/svice/src/app/views/pages/signup/signup.css
+++ b/svice-frontend/svice/src/app/views/pages/signup/signup.css
@@ -1,5 +1,5 @@
 .signup-background {
-  background-image: url('../../../assets/img/bg11.jpg');
+  background-image: url('../../../../assets/img/bg11.jpg');
   background-size: cover;
   background-position: top center;
   min-height: 700px;
