--- a/svice-frontend/svice/src/index.css
+++ b/svice-frontend/svice/src/index.css
@@ -5,6 +5,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-size: 15px;
 }
 
 code {
@@ -18,4 +19,8 @@ code {
 
 .error-text {
 	font-size: smaller;
+}
+
+#navbar-brand {
+	font-size: x-large;
 }
