--- a/svice-frontend/svice/src/index.css
+++ b/svice-frontend/svice/src/index.css
@@ -8,6 +8,10 @@ body {
 	font-size: 15px;
 }
 
+.navbar-text {
+	font-size: 15px !important;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
